--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask
-gunicorn
-scikit-learn
-pandas
-numpy
-joblib
+Flask==2.2.5
+gunicorn==20.1.0
+scikit-learn==1.3.2
+pandas==2.2.2
+numpy==1.26.2
+joblib==1.3.2
